feat(nginx): added DO loadbalancer annotations

--- a/do/helm/nginx.canary.values.yaml
+++ b/do/helm/nginx.canary.values.yaml
@@ -8,6 +8,10 @@ controller:
     targetCPUUtilizationPercentage: 70
     targetMemoryUtilizationPercentage: 70
 
+  service:
+    annotations:
+      "service.beta.kubernetes.io/do-loadbalancer-redirect-http-to-https": "true"
+
   ingressClassResource:
     name: nginx-canary
 
