--- a/do/helm/nginx.staging.values.yaml
+++ b/do/helm/nginx.staging.values.yaml
@@ -11,6 +11,10 @@ controller:
   ingressClassResource:
     name: nginx-staging
 
+  service:
+    annotations:
+      "service.beta.kubernetes.io/do-loadbalancer-redirect-http-to-https": "true"
+
   resources:
     limits:
       cpu: 300m
