--- a/yamls/argo/goldilocks.yaml
+++ b/yamls/argo/goldilocks.yaml
@@ -3,9 +3,8 @@ kind: Ingress
 metadata:
   name: goldilocks
   namespace: goldilocks
-  annotations:
-    kubernetes.io/ingress.class: argo
 spec:
+  ingressClassName: nginx-argo
   rules:
   - host: goldilocks.hugohafner.com
     http:
