--- a/do/helm/nginx.production.values.yaml
+++ b/do/helm/nginx.production.values.yaml
@@ -11,14 +11,17 @@ controller:
   ingressClassResource:
     name: nginx-production
 
-  service:
-    annotations:
-      "service.beta.kubernetes.io/do-loadbalancer-redirect-http-to-https": "true"
+  # service:
+    # annotations: {}
+      # "service.beta.kubernetes.io/do-loadbalancer-redirect-http-to-https": "true"
 
   resources:
     limits:
       cpu: 300m
       memory: 256Mi
     requests:
-      cpu: 200m
+      cpu: 300m
       memory: 128Mi
+
+  labels:
+    distribute: "true"
